[package]
name = "minigrep_fsdevon"
version = "0.1.0"
authors = ["fsdevon <fullstackdevovernight@gmail.com>"]
edition = "2018"
description = "A simple grep implementation from The Rust Programing Book."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3